force-app/main/default/objects/Examination__c/Examination__c.object-meta.xml
<CustomObject>
    <label>Examination</label>
    <nameField>
        <displayFormat>Exam-{0000}</displayFormat>
        <label>Examination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Examination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>