force-app/main/default/objects/Examination__c/fields/Affiliation_Organization__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Organization__c</fullName>
    <label>Affiliation/Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>