force-app/main/default/objects/Examination__c/fields/Appoinment_Information__c.field-meta.xml
<CustomField>
    <fullName>Appoinment_Information__c</fullName>
    <label>Appoinment Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kept</fullName>
            </value>
            <value>
                <fullName>Not Kept</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>