force-app/main/default/objects/Examination__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <label>Appointment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>