force-app/main/default/objects/Examination__c/fields/Contest_for_HIV_Test_Received__c.field-meta.xml
<CustomField>
    <fullName>Contest_for_HIV_Test_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contest for HIV Test Received</label>
    <type>Checkbox</type>
</CustomField>