force-app/main/default/objects/Examination__c/fields/COVID_Impacted__c.field-meta.xml
<CustomField>
    <fullName>COVID_Impacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COVID Impacted</label>
    <type>Checkbox</type>
</CustomField>