force-app/main/default/objects/Examination__c/fields/Lab_Test__c.field-meta.xml
<CustomField>
    <fullName>Lab_Test__c</fullName>
    <label>Lab Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Anemia Test</fullName>
            </value>
            <value>
                <fullName>Cholestrol Test</fullName>
            </value>
            <value>
                <fullName>Metabolic Screening</fullName>
            </value>
            <value>
                <fullName>Lead Test</fullName>
            </value>
            <value>
                <fullName>HIV Test</fullName>
            </value>
            <value>
                <fullName>Tuberculin Test (PPD)</fullName>
            </value>
            <value>
                <fullName>CBC</fullName>
            </value>
            <value>
                <fullName>Hemoglobinopathy Screening (Sickle Cell)</fullName>
            </value>
            <value>
                <fullName>Meningitis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phenylketonuria (PKU)</fullName>
            </value>
            <value>
                <fullName>STD Test</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>