force-app/main/default/objects/Examination__c/fields/Nature_of_Exam__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Exam__c</fullName>
    <label>Nature of Exam</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Health Examination</fullName>
            </value>
            <value>
                <fullName>Comprehensive Health Examination</fullName>
            </value>
            <value>
                <fullName>Annual Health Examination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sexual Abuse Examination</fullName>
            </value>
            <value>
                <fullName>Follow-up Health Examination</fullName>
            </value>
            <value>
                <fullName>EPSD/ Healthy Child</fullName>
            </value>
            <value>
                <fullName>Sick / Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>