force-app/main/default/objects/Examination__c/fields/Not_Kept_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Kept_Reason__c</fullName>
    <label>Not Kept Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>