force-app/main/default/objects/Examination__c/fields/Problem_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Problem_Diagnoses__c</fullName>
    <label>Problem/Diagnoses</label>
    <type>TextArea</type>
</CustomField>