force-app/main/default/objects/Examination__c/fields/Provider_Info_available__c.field-meta.xml
<CustomField>
    <fullName>Provider_Info_available__c</fullName>
    <label>Provider Info available</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>