force-app/main/default/objects/Examination__c/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Speciality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>