force-app/main/default/objects/Examination__c/fields/Speciality_Exam__c.field-meta.xml
<CustomField>
    <fullName>Speciality_Exam__c</fullName>
    <label>Speciality Exam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>